<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="?attr/actionBarSize">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">
            <LinearLayout
                android:id="@+id/marge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Chris Brady-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox_student1"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="60dp"
                        android:checked="false"
                        android:onClick="onCheckboxClicked"
                        android:text="@string/student1" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />

                <!--Cian Morrin-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox android:id="@+id/checkbox_student2"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/student2"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />


                <!--Richie Meyer-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox android:id="@+id/checkbox_student3"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/student3"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />

                <!--David Tilson-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox android:id="@+id/checkbox_student4"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/student4"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />

                <!--Glenn Moore-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox android:id="@+id/checkbox_student5"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/student5"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />


                <!--Josh Reid-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox android:id="@+id/checkbox_student6"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/student6"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />

                <!--Daniel Foley-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox android:id="@+id/checkbox_student7"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/student7"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />

                <!--Ben Cox-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox android:id="@+id/checkbox_student8"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/student8"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />

                <!--Dean O Rourke-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox android:id="@+id/checkbox_student9"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/student9"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="submit"
                    android:text="Submit" />


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>